// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Scroll> DOM element correctly renders when passed a error prop 1`] = `
<div>
  <div>
    Error
  </div>
</div>
`;

exports[`<Scroll> DOM element correctly renders when passed a error prop 2`] = `""`;

exports[`<Scroll> DOM element correctly renders when passed a loading prop 1`] = `
<div>
  <div>
    Loading ...
  </div>
</div>
`;

exports[`<Scroll> DOM element correctly renders when passed a loading prop 2`] = `""`;

exports[`<Scroll> DOM element correctly renders when passed a scroll prop and a render function 1`] = `
<div>
  <div>
    x: 
    0
     y: 
    0
     velocity: 
    -5
  </div>
</div>
`;

exports[`<Scroll> DOM element correctly renders when passed a scroll prop and a render function 2`] = `""`;

exports[`<Scroll> DOM element has the same query string 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": undefined,
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": undefined,
            "arguments": Array [],
            "directives": Array [
              Object {
                "arguments": Array [],
                "kind": "Directive",
                "name": Object {
                  "kind": "Name",
                  "value": "client",
                },
              },
            ],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "scroll",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "x",
                  },
                  "selectionSet": undefined,
                },
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "y",
                  },
                  "selectionSet": undefined,
                },
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "velocity",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 73,
    "start": 0,
  },
}
`;
